# RSSM_Navigation_World_Model

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: documentation.yaml  lint.yaml
cyber/: __init__.py
cyber/config/: utils.py
cyber/dataset/: __init__.py  cyberdataset.py  rawimagedataset.py  rawtokendataset.py  rawvideodataset.py  utils.py
cyber/models/: __init__.py  cybermodule.py
cyber/models/perception/mapping/topomap/: gt_map.py  localization.py  models.py  navigation.py  prism_topomap_node.py  topo_graph.py  utils.py
cyber/models/world/: __init__.py  worldmodel.py
cyber/models/world/autoencoder/: __init__.py  utils.py
cyber/models/world/autoencoder/cosmos_tokenizer/: README.md  utils.py  video_lib.py
cyber/models/world/autoencoder/cosmos_tokenizer/modules/: __init__.py  layers2d.py  layers3d.py  patching.py  quantizers.py  utils.py
cyber/models/world/autoencoder/cosmos_tokenizer/networks/: __init__.py  configs.py  continuous_video.py  discrete_video.py
cyber/models/world/autoencoder/magvit2/: util.py
cyber/models/world/autoencoder/magvit2/models/: cond_transformer_gpt.py  lfqgan.py
cyber/models/world/autoencoder/magvit2/modules/: ema.py  util.py
cyber/models/world/autoencoder/magvit2/modules/diffusionmodules/: improved_model.py  model.py
cyber/models/world/autoencoder/magvit2/modules/discriminator/: model.py
cyber/models/world/autoencoder/magvit2/modules/losses/: __init__.py  lpips.py  vqperceptual.py
cyber/models/world/autoencoder/magvit2/modules/scheduler/: lr_scheduler.py
cyber/models/world/autoencoder/magvit2/modules/transformer/: gpt.py  permuter.py
cyber/models/world/autoencoder/magvit2/modules/vqvae/: lookup_free_quantize.py  quantize.py
cyber/models/world/dynamic/: __init__.py
cyber/models/world/dynamic/genie/: attention.py  factorization_utils.py  st_mask_git.py  st_transformer.py  visualize.py
cyber/models/world/dynamic/rssm/: action_image_dataset.py  cosmos_test.py  dummy_model.py  planning_test.py  rssm.py  rssm2.py  rssm_test.py  visual_encoder.py
cyber/models/world/dynamic/rssm/train_set/: actions.npy  metadata.json
cyber/utils/: module.py  video.py
docs/: contact.md  features.md  file_structure.md  huggingface.md  index.md  reference.md  setup.md
docs/experiments/: world_model.md
docs/experiments/sagemaker/: README.md
docs/requirements/: requirements-doc.txt
docs/tutorial/: action.md  world.md
experiments/: README.md
experiments/configs/models/world/: MagVIT_Genie.yaml  openmagvit2.yaml  rssm.yaml  rssm2.yaml
experiments/models/world/: train_dynamic.py  train_dynamic_distributed.py  train_openmagvit2.py
experiments/notebooks/: autoencoder_demo.ipynb  compress_and_recon.py  compress_video.py  cosmos_demo.ipynb  notebook_utils.py
experiments/sagemaker/: accelerate_config.yaml  entry.py  train_script_sagemaker.sh
scripts/: build.sh  download_dataset.sh
tests/fixtures/configs/: genie.yaml
tests/fixtures/tensors/: cosmos_tokens.pth  genie_prediction.pth  img_tensor.pth  openmagvit2_encoded_tokens.pth  openmagvit2_reconstructed_image.pth  rssm_prediction_deterministic.pth  rssm_prediction_stochastic_1.pth  rssm_prediction_stochastic_2.pth  tokens.pth
tests/fixtures/tokenized_data/: metadata_ID1_3755.json  metadata_ID1_3756.json
tests/integration/: test_train.py
tests/models/: test_cosmos.py  test_genie.py  test_openmagvit2.py  test_rssm.py  utils.py
